Phase 3: Add more universities and sample application data
- Added 4 more Kenyan universities to the selection
- Added a sample CUEA application with approved status
- Updated UI with more realistic application data

--- a/prototype.html
+++ b/prototype.html
@@ -143,6 +143,10 @@
                                     <option value="JKUAT">Jomo Kenyatta University</option>
                                     <option value="MMUST">Masinde Muliro University</option>
                                     <option value="Moi">Moi University</option>
+                                    <option value="CUEA">Catholic University of Eastern Africa</option>
+                                    <option value="Strathmore">Strathmore University</option>
+                                    <option value="MountKenya">Mount Kenya University</option>
+                                    <option value="Kabarak">Kabarak University</option>
                                 </select>
                             </div>
                             <div>
@@ -560,6 +564,35 @@
                                         <span class="px-2 py-1 text-xs rounded bg-blue-100 text-blue-800">ID</span>
                                         <span class="px-2 py-1 text-xs rounded bg-blue-100 text-blue-800">KCSE</span>
                                         <span class="px-2 py-1 text-xs rounded bg-blue-100 text-blue-800">Other</span>
+                                    </div>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+                                    <button class="text-blue-600 hover:text-blue-900 mr-3 view-btn">View</button>
+                                    <button class="text-red-600 hover:text-red-900 revoke-btn">Revoke</button>
+                                </td>
+                            </tr>
+                            
+                            <!-- Sample row 5 - CUEA application -->
+                            <tr class="hover:bg-gray-50">
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                                    #1005
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <div class="text-sm text-gray-900">Paul Kamau</div>
+                                    <div class="text-sm text-gray-500">paul.k@email.com</div>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                                    CUEA
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <span class="px-2 py-1 text-xs rounded-full bg-green-100 text-green-800">
+                                        Approved
+                                    </span>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                                    <div class="flex space-x-1">
+                                        <span class="px-2 py-1 text-xs rounded bg-blue-100 text-blue-800">ID</span>
+                                        <span class="px-2 py-1 text-xs rounded bg-blue-100 text-blue-800">KCSE</span>
                                     </div>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
